ENEX FSL/snapshotDownload (1)/objects/ServiceResourceCapacity.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><externalSharingModel>ControlledByParent</externalSharingModel><fields><fullName>FSL__HoursInUse__c</fullName><deprecated>false</deprecated><externalId>false</externalId><formula>FSL__MinutesUsed__c / 60</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Hours In Use</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__Last_Updated_Epoch__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Last Updated Epoch</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__MinutesUsed__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Minutes Used</label><precision>14</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__Work_Items_Allocated__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Work Items Allocated</label><precision>8</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><sharingModel>ControlledByParent</sharingModel></CustomObject>